--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
         "eslint": "^5.7.0",
         "eslint-config-airbnb-base": "^13.1.0",
         "eslint-plugin-import": "^2.14.0"
+    },
+    "dependencies": {
+        "alexa-app": "^4.2.2"
     }
 }
